--- a/docker_compose_sandbox/docker-compose.yml
+++ b/docker_compose_sandbox/docker-compose.yml
@@ -6,9 +6,9 @@ version: '3'
 services:
   redis:
     image: "redis:alpine"
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    command: redis-server --requirepass ${REDIS_PASSWORD} --port 6380
     ports:
-      - "6379:6379"
+      - "6380:6380"
 
   sandbox-python:
     labels:
@@ -20,7 +20,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - REDIS_HOST=redis
-      - REDIS_PORT=6379
+      - REDIS_PORT=6380
       - REDIS_PASSWORD=${REDIS_PASSWORD}
       - PL=python
 #
@@ -43,7 +43,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - REDIS_HOST=redis
-      - REDIS_PORT=6379
+      - REDIS_PORT=6380
       - REDIS_PASSWORD=${REDIS_PASSWORD}
       - PL=csharp
 
